Upgrade generated html

--- a/html/02_program_structure.html
+++ b/html/02_program_structure.html
@@ -132,7 +132,7 @@ switch this throw true try typeof var void while with yield</pre>
 console.log(<span class="tok-string">&quot;el valor de x es&quot;</span>, x);
 <span class="tok-comment">// → el valor de x es 30</span></pre>
 
-<p><a class="p_ident" id="p-E3PxdGOQsJ" href="#p-E3PxdGOQsJ" tabindex="-1" role="presentation"></a>Aunque los nombres de enlaces no pueden contener puntos, <code>console.log</code> tiene uno. Esto se debe a que <code>console.log</code> no es un simple enlace, sino una expresión que recupera la propiedad <code>log</code> del valor contenido por el enlace <code>console</code>. Descubriremos exactamente lo que esto significa en <a href="04_data.html#propiedades">Capítulo 4</a>.</p>
+<p><a class="p_ident" id="p-1QcFA54MdF" href="#p-1QcFA54MdF" tabindex="-1" role="presentation"></a>Aunque los nombres de enlaces no pueden contener puntos, <code>console.log</code> tiene uno. Esto se debe a que <code>console.log</code> no es un simple enlace, sino una expresión que recupera la propiedad <code>log</code> del valor contenido por el enlace <code>console</code>. Descubriremos exactamente lo que esto significa en el <a href="04_data.html#properties">Capítulo 4</a>.</p>
 
 <h2 id="valores_retorno"><a class="h_ident" id="h-xdOUAXPBXv" href="#h-xdOUAXPBXv" tabindex="-1" role="presentation"></a>Valores de retorno</h2>
 
@@ -249,7 +249,7 @@ console.log(<span class="tok-number">12</span>);</pre>
 console.log(result);
 <span class="tok-comment">// → 1024</span></pre>
 
-<p><a class="p_ident" id="p-Ca1o09ICca" href="#p-Ca1o09ICca" tabindex="-1" role="presentation"></a>El contador también podría haber comenzado en <code>1</code> y haber comprobado si era <code>&lt;= 10</code>, pero por razones que se harán evidentes en <a href="04_data.html#array_indexing">Capítulo 4</a>, es buena idea acostumbrarse a contar desde 0.</p>
+<p><a class="p_ident" id="p-Ca1o09ICca" href="#p-Ca1o09ICca" tabindex="-1" role="presentation"></a>El contador también podría haber comenzado en <code>1</code> y haber comprobado si era <code>&lt;= 10</code>, pero por razones que se harán evidentes en el <a href="04_data.html#array_indexing">Capítulo 4</a>, es buena idea acostumbrarse a contar desde 0.</p>
 
 <p><a class="p_ident" id="p-/WWtFe+R3M" href="#p-/WWtFe+R3M" tabindex="-1" role="presentation"></a>Ten en cuenta que JavaScript también tiene un operador para la exponenciación (<code>2 ** 10</code>), que usarías para calcular esto en un código real, pero eso habría arruinado el ejemplo.</p>
 
@@ -384,7 +384,7 @@ fuzzyLittleTurtle</pre>
 
 <p><a class="p_ident" id="p-p1W8F/2VE7" href="#p-p1W8F/2VE7" tabindex="-1" role="presentation"></a>El primer estilo puede ser difícil de leer. Personalmente me gusta más la apariencia de los guiones bajos, aunque ese estilo es un poco difícil de escribir. Las funciones estándar de JavaScript y la mayoría de los programadores de JavaScript siguen el último estilo: capitalizan cada palabra excepto la primera. No es difícil acostumbrarse a pequeñas cosas como esa, y el código con estilos de nombrado mixtos puede resultar molesto de leer, así que seguimos esta convención.</p>
 
-<p><a class="p_ident" id="p-jCGMhIRLKD" href="#p-jCGMhIRLKD" tabindex="-1" role="presentation"></a>En algunos casos, como en la función <code>Number</code>, la primera letra de un enlace también está en mayúscula. Esto se hizo para marcar esta función como un constructor. Quedará claro lo que es un constructor en <a href="06_object.html#constructors">Capítulo 6</a>. Por ahora, lo importante es no molestarse por esta aparente falta de consistencia.</p>
+<p><a class="p_ident" id="p-jCGMhIRLKD" href="#p-jCGMhIRLKD" tabindex="-1" role="presentation"></a>En algunos casos, como en la función <code>Number</code>, la primera letra de un enlace también está en mayúscula. Esto se hizo para marcar esta función como un constructor. Quedará claro lo que es un constructor en el <a href="06_object.html#constructors">Capítulo 6</a>. Por ahora, lo importante es no molestarse por esta aparente falta de consistencia.</p>
 
 <h2><a class="h_ident" id="h-BU3lBD6Cl5" href="#h-BU3lBD6Cl5" tabindex="-1" role="presentation"></a>Comentarios</h2>
 
