--- a/html/18_http.html
+++ b/html/18_http.html
@@ -20,7 +20,7 @@
 
 </blockquote><figure class="chapter framed"><img src="img/chapter_picture_18.jpg" alt="Ilustración mostrando un formulario de registro en la web en un pergamino"></figure>
 
-<p><a class="p_ident" id="p-2aFcOtKP1P" href="#p-2aFcOtKP1P" tabindex="-1" role="presentation"></a>El <em>Protocolo de Transferencia de Hipertexto</em>, mencionado anteriormente en <a href="13_browser.html#web">Capítulo 13</a>, es el mecanismo a través del cual se solicita y proporciona datos en la World Wide Web. Este capítulo describe el protocolo con más detalle y explica la forma en que JavaScript del navegador tiene acceso a él.</p>
+<p><a class="p_ident" id="p-2aFcOtKP1P" href="#p-2aFcOtKP1P" tabindex="-1" role="presentation"></a>El <em>Protocolo de Transferencia de Hipertexto</em>, mencionado anteriormente en el <a href="13_browser.html#web">Capítulo 13</a>, es el mecanismo a través del cual se solicita y proporciona datos en la World Wide Web. Este capítulo describe el protocolo con más detalle y explica la forma en que JavaScript del navegador tiene acceso a él.</p>
 
 <h2><a class="h_ident" id="h-HKv2ecvyyl" href="#h-HKv2ecvyyl" tabindex="-1" role="presentation"></a>El protocolo</h2>
 
@@ -621,7 +621,7 @@ localStorage.removeItem(<span class="tok-string">&quot;nombre de usuario&quot;</
 
 <p><a class="p_ident" id="p-WrCCh4695B" href="#p-WrCCh4695B" tabindex="-1" role="presentation"></a>Construye una interfaz que permita a las personas escribir y ejecutar fragmentos de código JavaScript.</p>
 
-<p><a class="p_ident" id="p-Cq/MiKUIsw" href="#p-Cq/MiKUIsw" tabindex="-1" role="presentation"></a>Coloca un botón al lado de un campo <code>&lt;textarea&gt;</code> que, al ser presionado, utilice el constructor <code>Function</code> que vimos en <a href="10_modules.html#eval">Capítulo 10</a> para envolver el texto en una función y llamarla. Convierte el valor de retorno de la función, o cualquier error que genere, a una cadena y muéstralo debajo del campo de texto.</p>
+<p><a class="p_ident" id="p-Cq/MiKUIsw" href="#p-Cq/MiKUIsw" tabindex="-1" role="presentation"></a>Coloca un botón al lado de un campo <code>&lt;textarea&gt;</code> que, al ser presionado, utilice el constructor <code>Function</code> que vimos en el <a href="10_modules.html#eval">Capítulo 10</a> para envolver el texto en una función y llamarla. Convierte el valor de retorno de la función, o cualquier error que genere, a una cadena y muéstralo debajo del campo de texto.</p>
 
 <pre tabindex="0" class="snippet" data-language="html" ><a class="c_ident" id="c-ptqjTyjMJH" href="#c-ptqjTyjMJH" tabindex="-1" role="presentation"></a>&lt;<span class="tok-typeName">textarea</span> id=<span class="tok-string">&quot;code&quot;</span>&gt;return &quot;hi&quot;;&lt;/<span class="tok-typeName">textarea</span>&gt;
 &lt;<span class="tok-typeName">button</span> id=<span class="tok-string">&quot;button&quot;</span>&gt;Run&lt;/<span class="tok-typeName">button</span>&gt;
