--- a/html/19_paint.html
+++ b/html/19_paint.html
@@ -110,7 +110,7 @@
   <span class="tok-keyword">return</span> dom;
 }</pre>
 
-<p><a class="p_ident" id="p-UruQLxWms1" href="#p-UruQLxWms1" tabindex="-1" role="presentation"></a>La diferencia principal entre esta versión y la que usamos en <a href="16_game.html#domdisplay">Capítulo 16</a> es que asigna <em>propiedades</em> a los nodos del DOM, no <em>atributos</em>. Esto significa que no podemos usarlo para establecer atributos arbitrarios, pero <em>sí</em> podemos usarlo para configurar propiedades cuyo valor no es una cadena, como <code>onclick</code>, que se puede establecer como una función para registrar un controlador de eventos de clic.</p>
+<p><a class="p_ident" id="p-UruQLxWms1" href="#p-UruQLxWms1" tabindex="-1" role="presentation"></a>La diferencia principal entre esta versión y la que usamos en el <a href="16_game.html#domdisplay">Capítulo 16</a> es que asigna <em>propiedades</em> a los nodos del DOM, no <em>atributos</em>. Esto significa que no podemos usarlo para establecer atributos arbitrarios, pero <em>sí</em> podemos usarlo para configurar propiedades cuyo valor no es una cadena, como <code>onclick</code>, que se puede establecer como una función para registrar un controlador de eventos de clic.</p>
 
 <p><a class="p_ident" id="p-TBAKJdtUJA" href="#p-TBAKJdtUJA" tabindex="-1" role="presentation"></a>Esto permite este estilo conveniente para registrar manejadores de eventos:</p>
 
